Fixes #14942.  Move Tooltip offscreen when hidden to avoid reserving screen space.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@28079 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/common/Tooltip.less
+++ b/mobile/themes/common/Tooltip.less
@@ -125,6 +125,10 @@
 .mblTooltipHidden * {
 	visibility: hidden !important;
 }
+.mblTooltipHidden {
+	top: -99999px !important;
+	left: -99999px !important;
+}
 
 // Headings and Button styles are overridden in Tooltips
 .mblTooltip .mblHeading {
